copy some bootstrap files from salmon-unofficial

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,12 @@
 [submodule "pubsubhubbub"]
 	path = pubsubhubbub
 	url = git://github.com/jcleblanc/pubsubhubbub.git
+[submodule "py-ostatus"]
+	path = py-ostatus
+	url = git@github.com:snarfed/py-ostatus.git
+[submodule "webapp-improved"]
+	path = webapp-improved
+	url = git://github.com/moraes/webapp-improved.git
+[submodule "webutil"]
+	path = webutil
+	url = git@github.com:snarfed/webutil.git
